# cxx_project_template

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
src/: CMakeLists.txt
src/executable/: CMakeLists.txt  main.cpp
src/header_only_library/: CMakeLists.txt  hello_header_only.hpp
test/: CMakeLists.txt  two_plus_two.cpp
